Fix the execution logic